# CodeLens-Pro

./: .dockerignore  .env.docker.example  .gitignore  CLAUDE.md  README.md  alembic.ini  start.ps1
.github/workflows/: desktop-ci.yml  desktop-release-audit.yml
CodeLens/core/: analyzer.py  llm_client.py
CodeLens/report_history/: 20260609_173809_func_comment_98c7afc0.json  20260609_195437_script_structure_499a5994.json
backend/alembic/: env.py
backend/app/: db.py  models.py  schemas.py
backend/tests/: test_ui_support.py
exe-prototype/rewrite/: .gitattributes  .gitignore  README.md
exe-prototype/rewrite/desktop/src-tauri/: Cargo.toml  tauri.conf.json
exe-prototype/rewrite/desktop/src-tauri/capabilities/: default.json
exe-prototype/rewrite/desktop/src-tauri/src/: main.rs
exe-prototype/rewrite/desktop/src-tauri/windows/: hooks.nsh
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
scripts/: run_backend.py
vscode-extension/: .env.example  .vscodeignore  LICENSE.txt  codelens-pro-vscode-0.1.0.vsix  codelens-pro-vscode-0.1.1.vsix  package-lock.json
vscode-extension/CodeLens/: app.py  config.py
vscode-extension/scripts/: prepare-package.js
vscode-extension/src/: agentExecutor.ts  backendManager.ts  editorContext.ts  messageBridge.ts  webviewPanel.ts  webviewView.ts  workspaceHeartbeat.ts
vscode-extension/webview-mini/: package.json
vscode-extension/webview-mini-dist/: index.html
基础附件/: .env.docker.example  README.md  docker-compose.yml  课堂展示-需求分析演示稿.html
基础附件/frontend/: nginx.conf  package-lock.json  (+2 more)
(+190 files in other folders)
